<resources>
    <string name="btnSave">Save</string>
    <string name="btnEnd">Cancel</string>
    <string name="signin">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnDownloadData">Download Data</string>
    <string name="cs_MAexist">might be already exist</string>
    <string name="upd_db_form" translatable="false"> updateDB(FormVA):\t </string>
    <string name="upd_db_error" translatable="false"> Updating Database… ERROR! </string>
    <string name="db_excp_error" translatable="false"> Database Exception... ERROR! </string>
    <string name="upd_db" translatable="false"> Updating Database...\t </string>
    <string name="fail_db_upd" translatable="false"> Failed to Update Database! </string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="btnResetPassword">Reset Password</string>
    <string name="options" translatable="false">Options</string>
    <string name="actiondatabase" translatable="false">Database Manager</string>
    <string name="action_mark_attendance" translatable="false">Mark Attendance</string>
    <string name="action_create_location" translatable="false">Create New Location</string>
    <string name="newPassword" translatable="false">New Password</string>
    <string name="oldPassword" translatable="false">Old Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="netwrok">Network connection not available!</string>
    <string name="invalidpass">Invalid Password</string>
    <string name="unameRequired">Username is required.</string>
    <string name="incorrcetPass">Incorrect Password</string>
    <string name="downData">Please download data before login</string>
    <string name="permission">Permissions Required</string>
    <string name="warning">Warning</string>
    <string name="newApp">New App downloaded!!</string>
    <string name="appVer">App New Version</string>
    <string name="downloaded">Downloaded</string>
    <string name="appDownload">appDownload</string>
    <string name="newVer">New Version</string>
    <string name="downloading">Downloading</string>
    <string name="available">Available</string>
    <string name="downError">Cant download.. Internet connectivity issue!</string>
    <string name="backBtn">Press Back again to Exit</string>
    <string name="noNetwork">No network connection available!</string>
    <string name="appAvailable">APP is available!</string>
    <string name="oldAppMsg">App Ver." + " is now available. Your are currently using older Ver."</string>
    <string name="installNewApp">Install new version to use this app</string>
    <string name="install">Install</string>
    <string name="cancel">Back</string>
    <string name="complete">complete</string>
    <string name="updatingError">Error in updating db!!</string>
    <string name="updateDbError1">"Sorry. You can't go further."</string>
    <string name="updateDbError2">"Please contact IT Team (Failed to update DB)"</string>
    <string name="bckBtn">You Cant go back</string>
    <string name="processing">Processing</string>
    <string name="confirmation">Confirmation!</string>
    <string name="cntBtn">Are you sure, you want to continue - interview</string>
    <string name="failedUpdateDb">SORRY! Failed to update DB</string>
    <string name="invalidDate">Invalid date!</string>
    <string name="istatus">Result of Household Questionnaire interview</string>
    <string name="istatusa">Completed</string>
    <string name="istatusb">No household member at home or no competent respondent at home at time of visit</string>
    <string name="istatusc">Entire household absent for extended period</string>
    <string name="istatusd">Refused</string>
    <string name="istatuse">Dwelling vacant or address not a dwelling</string>
    <string name="istatusf">Dwelling not found</string>
    <string name="istatus96">Other (specify)</string>
    <string name="cr_mainheading"> بچوں کے حفاظتی ٹیکوں کا رجسٹر </string>
    <string name="cr_register_title">مستقل رجسٹر ٹیکہ جات برائے بچگان</string>
    <string name="cr_dmu_register">ڈی ایم یو رجسٹر نمبر</string>
    <string name="cr_reg_number">رجسٹر نمبر</string>
    <string name="cr_page_number">صفحہ نمبر</string>
    <string name="cr_rsno">سیریل نمبر</string>
    <string name="cr_card_number">کارڈ نمبر</string>
    <string name="cr_child_name">بچے کا نام</string>
    <string name="cr_father_name">باپ کا نام</string>
    <string name="cr_age_title">بچے کی عمر</string>
    <string name="cr_age_months">مہینے</string>
    <string name="cr_age_years">سال</string>
    <string name="cr_age_days">دن</string>
    <string name="cr_gender">جنس</string>
    <string name="cr_gender1">لڑکا </string>
    <string name="cr_gender2">لڑکی</string>
    <string name="cr_address">گھر کا پتہ</string>
    <string name="cr_address_previous">پچھلا درج کیا گیا پتہ</string>
    <string name="cr_phone">فون نمبر</string>
    <string name="cr_phone_na">فون نمبر نہیں دیا گیا</string>
    <string name="cr_bcg">بی سی جی</string>
    <string name="cr_bcg_d">تاریخ کی نوعیت</string>
    <string name="cr_bcg_d1">ٹک کا نشان</string>
    <string name="cr_bcg_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_hep_b">ہیپاٹائٹس بی</string>
    <string name="cr_hep_bd">تاریخ کی نوعیت</string>
    <string name="cr_hep_b1">ٹک کا نشان</string>
    <string name="cr_hep_b2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_opv">او پی وی</string>
    <string name="cr_opv0">او پی وی 0</string>
    <string name="cr_opv0_d">تاریخ کی نوعیت</string>
    <string name="cr_opv0_d1">ٹک کا نشان</string>
    <string name="cr_opv0_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_opv1">او پی وی 1</string>
    <string name="cr_opv1_d">تاریخ کی نوعیت</string>
    <string name="cr_opv1_d1">ٹک کا نشان</string>
    <string name="cr_opv1_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_opv2">او پی وی 2</string>
    <string name="cr_opv2_d">تاریخ کی نوعیت</string>
    <string name="cr_opv2_d1">ٹک کا نشان</string>
    <string name="cr_opv2_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_opv3">او پی وی 3</string>
    <string name="cr_opv3_d">تاریخ کی نوعیت</string>
    <string name="cr_opv3_d1">ٹک کا نشان</string>
    <string name="cr_opv3_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_rota">روٹا</string>
    <string name="cr_rota1">روٹا1</string>
    <string name="cr_rota1_d">تاریخ کی نوعیت</string>
    <string name="cr_rota1_d1">ٹک کا نشان</string>
    <string name="cr_rota1_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_rota2">روٹا2</string>
    <string name="cr_rota2_d">تاریخ کی نوعیت</string>
    <string name="cr_rota2_d1">ٹک کا نشان</string>
    <string name="cr_rota2_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_ipv">آئی پی وی</string>
    <string name="cr_ipv_d">تاریخ کی نوعیت</string>
    <string name="cr_ipv_d1">ٹک کا نشان</string>
    <string name="cr_ipv_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_pcv">پی سی وی</string>
    <string name="cr_pcv1">پی سی وی 1</string>
    <string name="cr_pcv1_d">تاریخ کی نوعیت</string>
    <string name="cr_pcv1_d1">ٹک کا نشان</string>
    <string name="cr_pcv1_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_pcv2">پی سی وی 2</string>
    <string name="cr_pcv2_d">تاریخ کی نوعیت</string>
    <string name="cr_pcv2_d1">ٹک کا نشان</string>
    <string name="cr_pcv2_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_pcv3">پی سی وی 3</string>
    <string name="cr_pcv3_d">تاریخ کی نوعیت</string>
    <string name="cr_pcv3_d1">ٹک کا نشان</string>
    <string name="cr_pcv3_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_penta">پینٹا</string>
    <string name="cr_penta1">پینٹا1</string>
    <string name="cr_penta1_d">تاریخ کی نوعیت</string>
    <string name="cr_penta1_d1">ٹک کا نشان</string>
    <string name="cr_penta1_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_penta2">پینٹا2</string>
    <string name="cr_penta2_d">تاریخ کی نوعیت</string>
    <string name="cr_penta2_d1">ٹک کا نشان</string>
    <string name="cr_penta2_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_penta3">پینٹا3</string>
    <string name="cr_penta3_d">تاریخ کی نوعیت</string>
    <string name="cr_penta3_d1">ٹک کا نشان</string>
    <string name="cr_penta3_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_measles">خسرہ</string>
    <string name="cr_measles1">خسرہ1</string>
    <string name="cr_measles1_d">تاریخ کی نوعیت</string>
    <string name="cr_measles1_d1">ٹک کا نشان</string>
    <string name="cr_measles1_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_measles2">خسرہ2</string>
    <string name="cr_measles2_d">تاریخ کی نوعیت</string>
    <string name="cr_measles2_d1">ٹک کا نشان</string>
    <string name="cr_measles2_d2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="cr_typhoid">ٹائیفائیڈ</string>
    <string name="cr_dpt">ڈی پی ٹی</string>
    <string name="cr_birth_status">کیا پیدائش پر بچہ محفوظ تھا</string>
    <string name="cr_birth_status1">ہاں</string>
    <string name="cr_birth_status2">نہیں</string>
    <string name="cr_birth_status_na">جواب نہیں دیا</string>
    <string name="cr_comments">تبصرہ اگر کوئی ہے</string>
    <string name="wr_mainheading">حفاظتی ٹیکوں کا رجسٹربرائے خواتین</string>
    <string name="wr_register_title">مستقل رجسٹر ٹیکہ جات برائے خواتین</string>
    <string name="wr_dmu_register">ڈی ایم یو رجسٹر نمبر</string>
    <string name="wr_reg_number">رجسٹر نمبر</string>
    <string name="wr_page_number">صفحہ نمبر</string>
    <string name="wr_rsno">سیریل نمبر</string>
    <string name="wr_card_number">کارڈ نمبر</string>
    <string name="villageName">گاؤں کا نام</string>
    <string name="wr_women_name">عورت کا نام</string>
    <string name="wr_husband_name">شوہر کا نام</string>
    <string name="wr_age_years">سال</string>
    <string name="wr_address">گھر کا پتہ</string>
    <string name="wr_address_previous">پچھلا درج کیا گیا پتہ</string>
    <string name="wr_phone">فون</string>
    <string name="wr_tt_title">تاریخ جب ٹی ٹی کا ٹیکہ لگایا گیا</string>
    <string name="wr_ttd1">تاریخ - 1 </string>
    <string name="wr_ttd1ds">تاریخ کی نوعیت</string>
    <string name="wr_ttd1ds1">ٹک کا نشان</string>
    <string name="wr_ttd1ds2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="wr_ttd2">تاریخ - 2</string>
    <string name="wr_ttd2ds">تاریخ کی نوعیت</string>
    <string name="wr_ttd2ds1">ٹک کا نشان</string>
    <string name="wr_ttd2ds2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="wr_ttd3">تاریخ - 3</string>
    <string name="wr_ttd3ds">تاریخ کی نوعیت</string>
    <string name="wr_ttd3ds1">ٹک کا نشان</string>
    <string name="wr_ttd3ds2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="wr_ttd4">تاریخ - 4</string>
    <string name="wr_ttd4ds">تاریخ کی نوعیت</string>
    <string name="wr_ttd4ds1">ٹک کا نشان</string>
    <string name="wr_ttd4ds2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="wr_ttd5">تاریخ - 5</string>
    <string name="wr_ttd5ds">تاریخ کی نوعیت</string>
    <string name="wr_ttd5ds1">ٹک کا نشان</string>
    <string name="wr_ttd5ds2">تاریخ پڑھی نہیں جا رہی</string>
    <string name="wr_comments">تبصرہ اگر کوئی ہے</string>
    <string name="va_mainheading">وی-اے: روزانہ   کارکردگی رجسٹر برائے ٹیکہ جات</string>
    <string name="vb_mainheading">وی-بی: ویکسین کی معلومات</string>
    <string name="app_name">HF Vaccination</string>
    <string name="va_info">This section will only appear once at the time of login</string>
    <string name="va02_info">selection will be from drop down table name is epi_register.reg_master </string>
    <string name="vb05t_info">if VB03=1 then only vb05y will be visible</string>
    <string name="vb08c_info">While selecting the vaccine, with each check the date should be saved on database.</string>
</resources>