<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuOptions"
        android:icon="@drawable/ic_menu_hamburger"
        android:title="@string/options"
        app:showAsAction="always">
        <menu>

            <!--            <item
                            android:id="@+id/action_mark_attendance"
                            android:title="@string/action_mark_attendance" />-->
            <item
                android:id="@+id/action_create_location"
                android:title="@string/action_create_location" />
            <item
                android:id="@+id/action_database"
                android:title="@string/actiondatabase" />
            <item
                android:id="@+id/onSync"
                android:title="Sync Data"
                app:showAsAction="collapseActionView" />
            <!--            <item-->
            <!--                android:id="@+id/changeLoc"-->
            <!--                android:title="Change Location"-->
            <!--                app:showAsAction="collapseActionView" />-->
            <item
                android:id="@+id/changePassword"
                android:title="Change Password" />
            <item
                android:id="@+id/sendDB"
                android:title="Send DB"
                android:titleCondensed="Email database"
                android:visible="false"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/checkPendingForms"
                android:title="Pending Forms"
                android:visible="false"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/formsReportDate"
                android:title="Forms Report by Date"
                android:titleCondensed="List of all forms by date"
                android:visible="false"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/formsReportCluster"
                android:title="Forms Report by Cluster"
                android:titleCondensed="List of all forms by date"
                android:visible="false"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/summary"
                android:title="Summary"
                android:titleCondensed="Summary"
                app:showAsAction="collapseActionView" />

        </menu>
    </item>
</menu>