<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.dmu.hf_vaccination.ui.LoginActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/loginProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/bg"
            android:padding="@dimen/_4sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_50sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/blackOverlay"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_20sdp"
                    android:radius="@dimen/_10sdp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="110dp"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/_2sdp"
                        android:src="@drawable/app_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:padding="@dimen/_12sdp"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        style="@style/labels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_6sdp"
                        android:layout_marginTop="0dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/_1sdp"
                            android:elevation="@dimen/_2sdp"
                            android:radius="@dimen/_5sdp"
                            app:cardCornerRadius="@dimen/_5sdp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#f7f7f7"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/_6sdp"
                                    android:orientation="vertical">

                                    <EditText
                                        android:text="user1_uc-108"
                                        android:id="@+id/username"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_marginBottom="@dimen/_8sdp"
                                        android:background="@color/white"
                                        android:drawableStart="@drawable/ic_username"
                                        android:drawablePadding="@dimen/_4sdp"
                                        android:elevation="1dp"
                                        android:gravity="center_vertical"
                                        android:hint="@string/username"
                                        android:imeOptions="actionUnspecified"
                                        android:inputType="textEmailAddress"
                                        android:maxLines="1"
                                        android:minWidth="@dimen/_180sdp"
                                        android:paddingStart="@dimen/_6sdp"
                                        android:paddingTop="@dimen/_4sdp"
                                        android:paddingEnd="@dimen/_6sdp"
                                        android:paddingBottom="@dimen/_4sdp"
                                        android:radius="@dimen/_1sdp"
                                        android:singleLine="true"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="@dimen/_9sdp" />

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <EditText
                                            android:text="test0002"
                                            android:id="@+id/password"
                                            android:layout_width="0dp"
                                            android:layout_height="match_parent"
                                            android:layout_gravity="center_horizontal"
                                            android:layout_weight="8"
                                            android:background="@color/white"
                                            android:drawableStart="@drawable/ic_lock_close"
                                            android:drawablePadding="@dimen/_4sdp"
                                            android:elevation="1dp"
                                            android:hint="@string/password"
                                            android:imeActionLabel="Password"
                                            android:imeOptions="actionUnspecified"
                                            android:inputType="textPassword"
                                            android:maxLines="1"
                                            android:minWidth="@dimen/_180sdp"
                                            android:paddingStart="@dimen/_6sdp"
                                            android:paddingTop="@dimen/_4sdp"
                                            android:paddingEnd="@dimen/_6sdp"
                                            android:paddingBottom="@dimen/_4sdp"
                                            android:radius="@dimen/_1sdp"
                                            android:singleLine="true"
                                            android:textColor="@color/colorPrimary"
                                            android:textSize="@dimen/_9sdp" />

                                        <ImageButton
                                            android:id="@+id/showPasswordOld"
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:background="@drawable/login_eyestyle"
                                            android:onClick="onShowPasswordClick"
                                            android:paddingStart="@dimen/_6sdp"
                                            android:paddingEnd="@dimen/_6sdp"
                                            android:src="@drawable/ic_login_eye"
                                            android:textSize="@dimen/_12sdp" />

                                    </LinearLayout>

                                    <ProgressBar
                                        android:id="@+id/pbarMR"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:visibility="gone" />

                                    <androidx.appcompat.widget.AppCompatButton
                                        android:id="@+id/btnSignin"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="@dimen/_6sdp"
                                        android:layout_marginBottom="@dimen/_6sdp"
                                        android:background="@drawable/all_round_corners"
                                        android:backgroundTint="@color/colorPrimary"
                                        android:elevation="1dp"
                                        android:onClick="attemptLogin"
                                        android:paddingStart="@dimen/_4sdp"
                                        android:paddingEnd="@dimen/_4sdp"
                                        android:radius="@dimen/_2sdp"
                                        android:text="@string/btnLogin"
                                        android:textColor="@color/white"
                                        android:textStyle="bold"
                                        android:visibility="visible" />

                                </LinearLayout>

                                <Button
                                    android:id="@+id/syncData"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="@dimen/_6sdp"
                                    android:layout_marginBottom="@dimen/_6sdp"
                                    android:background="@drawable/all_round_corners"
                                    android:drawableStart="@drawable/ic_upload"
                                    android:drawablePadding="@dimen/_4sdp"
                                    android:onClick="onSyncDataClick"
                                    android:paddingStart="@dimen/_4sdp"
                                    android:paddingEnd="@dimen/_6sdp"
                                    android:text="@string/downData"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="@dimen/_8sdp" />
                            </LinearLayout>


                        </androidx.cardview.widget.CardView>


                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtinstalldate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:paddingBottom="@dimen/_2sdp"
                        android:shadowColor="#d6d6d6"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1"
                        android:text="Ver."
                        android:textColor="#989898"
                        android:textSize="@dimen/_5sdp" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>